
2016-12-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* runtime.conf: FR #191 added COB_EXIT_WAIT and COB_EXIT_MSG

2016-10-13  Ron Norman <rjn@inglenet.com>

	* Add arithmetic-osvs

2015-07-07  Ron Norman <rjn@inglenet.com>

	* DISPLAY ... UPON PRINTER can be redirected via
	  the env var COBPRINTER similar to what Micro Focus supports
	  In addtion COB_DISPLAY_PRINTER can be used as a file name and
	  cob_display will do an fopen "a" and append to that file

2015-07-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* added new configuration cobol2014.conf (most values marked as not verified yet)

2015-03-10  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* added new configuration type "runtime configuration": runtime.cfg which
	  will include all runtime flags and short documentation of these (TODO)

2014-10-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* added new configuration acu.conf (most values marked as not verified yet)
	* added word-length

2014-07-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* added accept-update and accept-auto (set to "no" in all
	  configuration files)

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3
	* add information about config options in config/xyz.conf while removing
	  include of default.conf (every conf file now contains all configuration
	  entries)

2007-12-27  Roger While <simrw@sim-basis.de>

	* Mark 1.0 RELEASE

2007-08-23  Roger While <simrw@sim-basis.de>

	* Remove deprecated v023.conf
	  Remove display-sign

2007-01-29  Roger While <simrw@sim-basis.de>

	* Add odo-without-to, default OK, set to unconformable
	  for 85/2002

2006-09-30  Roger While <simrw@sim-basis.de>

	* All conf's : Make filename-mapping default

2006-02-02  Roger While <simrw@sim-basis.de>

	* Add relax-level-hierarchy to ibm.conf, mvs.conf,
	  mf.conf, bs2000.conf

2006-01-20  Roger While <simrw@sim-basis.de>
