@@ -268,7 +268,8 @@
 #   Parameter name:  ls_nulls
 #          Purpose:  Defines for LINE SEQUENTIAL files what to do with data
 #                    which is not DISPLAY type.  This could happen if a LINE
-#                    SEQUENTIAL record has COMP data fields in it.
+#                    SEQUENTIAL record has BINARY/COMP data fields in it.
+#                    This option is only for GnuCOBOL format files
 #             Type:  boolean
 #          Default:  false
 #             Note:  The TRUE setting will handle files that contain COMP data
@@ -279,7 +280,8 @@
 #   Parameter name:  ls_validate
 #          Purpose:  Defines for LINE SEQUENTIAL files that the data should be
 #                    validated. If any record has non-DISPLAY characters then
-#                    an error status of 30 is returned
+#                    an error status of 34 is returned
+#                    This option is only for GnuCOBOL format files
 #             Type:  boolean
 #          Default:  true
 #             Note:  The TRUE setting does data validation
@@ -294,6 +296,66 @@
 #             Type:  boolean
 #          Default:  false
 #          Example:  MF_FILES = TRUE
+
+# Environment name:  COB_MF_LS_NULLS
+#   Parameter name:  mf_ls_nulls
+#          Purpose:  Defines for Micro Focus compatible LINE SEQUENTIAL files 
+#                    what to do with data which is not DISPLAY type.  
+#                    This could happen if a LINE SEQUENTIAL record has 
+#                    BINARY/COMP data fields in it.
+#             Type:  boolean
+#          Default:  true
+#             Note:  The TRUE setting will handle files that contain COMP data
+#                    in a similar manner to the method used by Micro Focus COBOL
+#          Example:  LS_NULLS = TRUE
+
+# Environment name:  COB_MF_LS_VALIDATE
+#   Parameter name:  mf_ls_validate
+#          Purpose:  Defines for Micro Focus compatible LINE SEQUENTIAL files 
+#                    that the data should be validated. 
+#                    If any record has non-DISPLAY characters then
+#                    an error status of 34 is returned
+#             Type:  boolean
+#          Default:  false
+#             Note:  The TRUE setting does data validation
+#                    The FALSE setting lets non-DISPLAY characters be written
+#                    If MF_LS_NULLS is set, then MF_LS_VALIDATE is not checked
+#          Example:  MF_LS_VALIDATE = FALSE
+
+# Environment name:  COB_SHARE_MODE
+#   Parameter name:  share_mode
+#          Purpose:  Defines what file sharing option should be used
+#             Type:  -- choice of values ---
+#                    none - nothing overrides application code
+#                    read - files opened as SHARE READ ONLY
+#                    all  - files opened as SHARE ALL OTHERS
+#                    no   - files opened as SHARE NO OTHERS
+#          Default:  none 
+#          Example:  share_mode = ALL
+
+# Environment name:  COB_RETRY_MODE
+#   Parameter name:  retry_mode
+#          Purpose:  Defines what I/O retry sharing option should be used
+#             Type:  --- choice of values ---
+#                    none    - nothing overrides application code
+#                    never   - I/O is never retried
+#                    forever - I/O will be retried until success
+#          Default:  none 
+#          Example:  retry_mode = never
+
+# Environment name:  COB_RETRY_TIMES
+#   Parameter name:  retry_times
+#          Purpose:  Defines how many times I/O should be retried 
+#             Type:  integer
+#          Default:  0 
+#          Example:  retry_times = 10
+
+# Environment name:  COB_RETRY_SECONDS
+#   Parameter name:  retry_seconds
+#          Purpose:  Defines how many seconds I/O should be retried 
+#             Type:  integer
+#          Default:  0 
+#          Example:  retry_seconds = 6
 
 # Environment name:  COB_SYNC
 #   Parameter name:  sync
