@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2007-2012, 2014-2015 Free Software Foundation, Inc.
+   Copyright (C) 2007-2012, 2014-2017 Free Software Foundation, Inc.
    Written by Roger While, Simon Sobisch, Ron Norman
 
    This file is part of GnuCOBOL.
@@ -236,9 +236,11 @@ typedef struct __cob_settings {
 	unsigned int	cob_unix_lf;		/* Use POSIX LF */
 	unsigned int	cob_do_sync;
 	unsigned int	cob_ls_uses_cr;		/* Line Sequential uses CR LF */
-	unsigned int	cob_ls_nulls;		/* NUL insert to Line Sequential */
 	unsigned int	cob_ls_fixed;		/* Line Sequential is fixed length */
+	unsigned int	cob_ls_nulls;		/* NUL insert to Line Sequential */
 	unsigned int	cob_ls_validate;	/* Validate data in Line Sequential */
+	unsigned int	cob_mf_ls_nulls;	/* MF file: NUL insert to Line Sequential */
+	unsigned int	cob_mf_ls_validate;	/* MF file: Validate data in Line Sequential */
 	unsigned int	cob_varseq_type;	/* Variable Sequential Default file format */
 	unsigned int	cob_varrel_type;	/* Variable Relative default file format */
 	unsigned int	cob_fixrel_type;	/* Fixed Relative default file format */
@@ -248,6 +250,8 @@ typedef struct __cob_settings {
 	unsigned int	cob_retry_seconds;	/* Default: RETRY n SECONDS value */
 	unsigned int	cob_trace_io;		/* If TRACE READY, also dump File/Record/Status */
 	unsigned int	cob_stats_record;	/* If record I/O statics */
+	unsigned int	cob_share_mode;		/* Default file share mode */
+	unsigned int	cob_retry_mode;		/* Default file retry mode */
 	char		*cob_stats_filename;	/* Place to write I/O stats */
 	char 		*cob_file_path;
 	char		*bdb_home;
